# nemo-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_auth_466/: pyproject.toml
fastapi_auth_466/fastapi_auth_466/: auth.py  user.py
fastapi_auth_466/tests/: test_auth.py
nemo_agent/: __init__.py  main.py
news_scraper_604/: .coveragerc  pyproject.toml
news_scraper_604/news_scraper_604/: scraper.py
news_scraper_604/tests/: test_scraper.py
project_423/: .coverage  .coveragerc  main.py  pyproject.toml
project_423/tests/: test_main.py
project_517/: .coverage  .coveragerc  main.py  pyproject.toml
project_517/tests/: test_main.py
project_916/: .coverage  .coveragerc  main.py  pyproject.toml
project_916/tests/: test_main.py
task_user_694/: .coveragerc  pyproject.toml
task_user_694/task_user_694/: app.py
task_user_694/task_user_694/templates/: base.html
user_registration_117/: .coveragerc  pyproject.toml
user_registration_117/tests/: test_main.py
user_registration_117/user_registration_117/: .coveragerc  main.py
