[tool.poetry]
name = "nemo-agent"
version = "2.6.0"
description = "Your Python AI Coder"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://nemo-agent.com"
repository = "https://github.com/truemagic-coder/nemo-agent"
keywords = ["ai", "agent", "ai agent", "local ai agent", "python ai agent"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "nemo_agent"}]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
click = "^8.1.7"
requests = "^2.32.3"
openai = "^1.54.5"
anthropic = "^0.39.0"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nemo-agent = "nemo_agent.main:cli"
