[tool.poetry]
name = "nemo-agent"
version = "5.0.2"
description = "Your Python AI Coder"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://nemo-agent.com"
repository = "https://github.com/truemagic-coder/nemo-agent"
keywords = ["ai", "agent", "ai agent", "local ai agent", "python ai agent"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "nemo_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "*"
openai = "*"
tiktoken = "0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nemo-agent = "nemo_agent.main:cli"
